Fix Authorization types not generating properly in Typescript (they didn't inherit from Authorization)
